# ffmpeg-swarm

./: Cargo.toml  Dockerfile  README.md  TODO.md  justfile
migrations/2023-07-21-201938_init/: down.sql  up.sql
src/: cli.rs  config.rs  db.rs  inc.rs  init.sql  ipc.rs  main.rs  models.rs  mqtt.rs  schema.rs  server.rs  service.rs  utils.rs
src/cli/: ipc.rs  parse.rs  validation.rs
src/server/: commands.rs  coordination.rs  run.rs
src/server/commands/: acquire.rs  advertise.rs  complete.rs  dispatch.rs  save_peer.rs  submit.rs
