[package]
name = "ffmpeg-swarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.3.10", features = ["derive"] }
directories = "5.0.1"
futures = { version = "0.3.28", default-features = false }
futures-lite = "1.13.0"
interprocess = { version = "1.2.1", features = ["tokio_support"] }
postcard = { version = "1.0.4", features = ["alloc"] }
quinn = "0.10.1"
rcgen = "0.11.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rustls = "0.21.2"
serde = "1.0.166"
serde_derive = "1.0.166"
serde_json = "1.0.100"
service-manager = "0.3.0"
tokio = { version = "1.29.1", features = ["io-util", "macros", "sync"] }
