[package]
name = "ffmpeg-swarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
base64 = "0.21.2"
chrono = "0.4.26"
clap = { version = "4.3.10", features = ["derive"] }
diesel = { version = "2.1.0", default-features = false, features = ["sqlite", "chrono", "uuid"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
directories = "5.0.1"
futures = { version = "0.3.28", default-features = false }
futures-lite = "1.13.0"
interprocess = { version = "1.2.1", features = ["tokio_support"] }
local-ip-address = "0.5.3"
once_cell = "1.18.0"
postcard = { version = "1.0.4", features = ["alloc"] }
quinn = "0.10.1"
rcgen = "0.11.1"
rumqttc = "0.22.0"
rustls = "0.21.2"
serde = "1.0.166"
serde_derive = "1.0.166"
serde_json = "1.0.100"
service-manager = "0.3.0"
sha2 = "0.10.7"
tokio = { version = "1.29.1", features = ["io-util", "macros", "sync", "process"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
