[package]
name = "ffmpeg-swarm"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
atomic-take = "1.1.0"
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.10", features = ["derive"] }
directories = "5.0.1"
futures = { version = "0.3.28", default-features = false }
futures-lite = "1.13.0"
interprocess = { version = "1.2.1", features = ["tokio_support"] }
local-ip-address = "0.5.3"
nix = "0.26.2"
once_cell = "1.18.0"
postcard = { version = "1.0.4", features = ["alloc"] }
public-ip = "0.2.2"
quinn = "0.10.1"
rcgen = "0.11.1"
rumqttc = "0.22.0"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono", "uuid"] }
rustls = "0.21.2"
serde = "1.0.166"
serde_derive = "1.0.166"
serde_json = "1.0.100"
service-manager = "0.3.0"
sha2 = "0.10.7"
tokio = { version = "1.29.1", features = ["io-util", "macros", "sync", "process", "fs"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
zstd = "0.12.4"
